<resources>
    <string name="app_name">Stores</string>

    <string name="description_image_photo">Store Image</string>
    <string name="description_store_add">Button for add store</string>

    <string name="dialog_delete_title">¿Delete Store?</string>
    <string name="dialog_delete_button">Delete</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_options_title">What would you like to do?</string>

    <string name="menu_save">Save</string>
    <string name="arg_id" translatable="false">arg_id</string>


    <string name="edit_store_title_add">Create Store</string>
    <string name="edit_store_message_success">Store added correctly!</string>
    <string name="edit_store_message_update_success">Store Updated</string>
    <string name="edit_store_message_valid">Review required field</string>
    <string name="edit_store_title_edit">Edit Store</string>

    <string name="main_error_no_website">This store not have a website</string>
    <string name="main_error_no_resolve">There is not an compatible App.</string>

    <string name="hint_phone">Phone</string>
    <string name="hint_website">Website URL</string>
    <string name="hint_photoUrl">Photo URL</string>
    <string name="hint_name">Store Name</string>

    <string name="helper_required">Required</string>

    <string name="option_delete">Delete</string>
    <string name="option_call">Call</string>
    <string name="option_goToWeb">Go to website</string>

</resources>